--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -1,17 +1,18 @@
+<!DOCTYPE html>
 <html>
-<title>SoundGroups</title>
-<head>
+    <head>
+        <title>SoundGroups</title>
+    </head>
+    <body>
 
+        <a href="#" class="button" id="get_favourites">Click for favourites</a>
+        <div class="favourites"></div>
 
-</head>
-  
-<a href="#" class="button" id="connect"><img src="../images/btn-connect-l.png"/></a>
-<a href="#" class="button" id="get_favourites">Click for favourites</a>
-<div class="favourites"></div>
-</div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"></script>
-    <script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"></script>
-    <script src="http://connect.soundcloud.com/sdk.js"></script>
-    <script src="../js/soundgroups.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+        <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"></script>
+        <script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"></script>
+        <script src="http://connect.soundcloud.com/sdk.js"></script>
+        <script src="../js/soundgroups.js"></script>
+        <script src="../js/connect_view.js"></script>
+    </body>
 </html>
