--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -11,7 +11,9 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
         <script src="http://ajax.cdnjs.com/ajax/libs/underscore.js/1.1.6/underscore-min.js"></script>
         <script src="http://ajax.cdnjs.com/ajax/libs/backbone.js/0.3.3/backbone-min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0-rc.3/handlebars.min.js"></script>
         <script src="http://connect.soundcloud.com/sdk.js"></script>
+        <script src="../js/templates.js"></script>
         <script src="../js/soundgroups.js"></script>
         <script src="../js/connect_view.js"></script>
     </body>
