Add a groups route for main page

--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/myController.js"></script>
         <script src="scripts/services/myService.js"></script>
+        <script src="scripts/controllers/groups.js"></script>
         <!-- endbuild -->
 </body>
 </html>
